# MLOpsEnergyDemandForecasting

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
notebook/: Feature_Engineering_and_Model_Training.ipynb  Preprocessing_and_Data_Analysis.ipynb
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py  train_pipeline.py
src/utils/: utils.py
