[project]
name = "mlops-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mainak Dan", email = "mainak.dan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.10",
    "dill>=0.4.1",
    "flask>=3.1.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
]
